--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/arttelit
 spring.datasource.username=root
 spring.datasource.password=Overmight_4140
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.main.banner-mode=off
+logging.level.com.arttelit.chibisov.simplestock=DEBUG
