--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/arttelit
 spring.datasource.username=root
-spring.datasource.password=Overmight_4140
+spring.datasource.password=******
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.main.banner-mode=off
